--- a/server/package.json
+++ b/server/package.json
@@ -4,12 +4,15 @@
   "description": "",
   "main": "server.js",
   "scripts": {
+    "start":"nodemon server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "tradecoder",
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
+    "dot-env": "0.0.1",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongodb": "^3.6.8",
     "mongoose": "^5.12.10"
