--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongodb": "^3.6.8",
-    "mongoose": "^5.12.10"
+    "mongoose": "^5.12.10",
+    "shortid": "^2.2.16"
   }
 }
